feat: implement core services, DAO layers, and frontend routing for career, leave, and attendance management modules